[MPLAYER] Create player module API, implemented by MPlayer and add controls on UI. Controls are dispatched by Guava Event Bus.